# titsa-gtfs-exploration

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download.sh  pyproject.toml
data/: agency.txt  calendar_dates.txt  routes.txt  stops.txt  trips.txt
gtfs_utils/: __init__.py  harvesine.py  time.py
notebooks/: Exploring Data.ipynb
schemas/: agency.py  calendar_dates.py  routes.py  stop_times.py  stops.py  trips.py
tests/: test_gtfs_utils.py
